@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>yili-mybatis-plus</artifactId>
-    <groupId>cn.yili.mybatis</groupId>
+    <groupId>com.yilijishu</groupId>
     <version>1.0.0</version>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -17,6 +17,39 @@
 -Dversion=1.2.6-SNAPSHOT
 -Dpackaging=jar
 -DlocalRepositoryPath=C:\Users\xxxx\.m2\repository -->
+
+
+    <name>Yili MyBatis Plus</name>
+    <description>yilijishu mybatis plus plugin</description>
+    <url>https://github.com/example/yili-mybatis-plus</url>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git@github.com:example/yili-mybatis-plus.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:example/yili-mybatis-plus.git</developerConnection>
+        <url>https://github.com/example/yili-mybatis-plus</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>yilijishu</id>
+            <name>yilijishu</name>
+            <email>sdzy890819@126.com</email>
+            <roles>
+                <role>Developer</role>
+            </roles>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
+
+
+
     <dependencies>
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -26,7 +59,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
+            <version>1.18.30</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -54,12 +88,53 @@
             <version>5.3.3</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
+            <!-- 源代码插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- JavaDoc插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <!-- 配置选项可以根据需要调整 -->
+                    <additionalOptions>
+                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</option>
+                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</option>
+                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</option>
+                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</option>
+                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</option>
+                    </additionalOptions>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
@@ -74,6 +149,33 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>yilijishu</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                    <autoPublish>true</autoPublish>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
